fix playground feature list on small screens. closes #642

--- a/less/app.less
+++ b/less/app.less
@@ -1054,6 +1054,11 @@ section#the-goods { margin-top: 44px; }
                 float: left;
                 margin-right: 5%;
                 margin-bottom: 22px;
+                
+                @media @screen-tiny {
+                    width: 100%;
+                    float: none;
+                }
 
                 &:after { visibility: hidden; display: block; content: ""; clear: both; height: 0; }
             }
